Changelog
=========

0.9.1 (unreleased)
------------------

- Improve error reporting when timelog entries are out of order (i.e. end before begin)

- Don't put out colors in ``gtl-progress`` when terminal doesn't support it.

- Use locally build `` jira-python`` (now named ``jira``) instead of
  ``jira-python`` which no longer existis on PyPI.

0.9.0 (2014-02-25)
------------------

- Uploading via ``bin/gtl-upload`` defaults to the last seven days when given
  no explicit date to upload.


0.8.6 (2013-12-06)
------------------

- Fix `decode_passwords` feature to again allow umlauts in task
  descriptions.

- Allow to use ``decode_passwords = rot13`` to encode passwords using the
  ROT13 algorithm.


0.8.5 (2013-12-05)
------------------

- Fixed recent fix: actually use the encoding opt-in in the other place, too.


0.8.4 (2013-12-05)
------------------

- Fixed recent change: actually use the encoding opt-in.


0.8.3 (2013-12-05)
------------------

- Work around jira-python bug #72 with non-ASCII server error messages.

- Removed traces of Hour tracker, including dependency on lxml.

- Obfuscate plain-text passwords in .gtimelogrc to at least make them less
  readily readable by someone happening to see you open the file; off by
  default. Encode your passwords with base64 and set
  ``gtimelog:decode_passwords = base64`` to use obfuscation.

- Find the tracker for a project by longest prefix match, independent of the
  order of trackers in gtimelogrc.


0.8.2 (2013-09-25)
------------------

- Improve reporting of entries which cannot be matched.

- Fix commandline upload (broken after jira/redmine refactoring).


0.8.1 (2013-09-24)
------------------

- Work around jira-python bug #60 that makes multiple connections to different
  servers impossible.


0.8 (2013-09-19)
----------------

- Introduce command-line utility ``gtl-progress`` which calculates the work-done
  progress of a given (or the current by default) week.
