@@ -1,11 +1,12 @@
 [buildout]
 develop = .
-parts = scripts
+parts = scripts test
 find-links = http://download.gocept.com/packages/
 allow-hosts = *.python.org
               *.gocept.com
 versions = versions
 allow-picked-versions = false
+index = http://pypi.gocept.com/simple
 
 [versions]
 BeautifulSoup = 3.2.1
@@ -22,12 +23,12 @@ six = 1.9.0
 pytz = 2013b
 requests = 1.2.3
 requests-oauthlib = 0.3.3
-setuptools = 0.9.5
+setuptools = 15.2
 sphinx = ${:Sphinx}
 tlslite = 0.4.6
 transaction = 1.4.1
-zc.buildout = 2.2.0
-zc.recipe.egg = 2.0.0
+zc.buildout = 2.3.1
+zc.recipe.egg = 2.0.1
 zc.recipe.testrunner = 2.0.0
 zope.cachedescriptors = 4.0.0
 zope.deprecation = 4.0.2
